--- a/UI/Views/PerfilHardware/Edit.cshtml
+++ b/UI/Views/PerfilHardware/Edit.cshtml
@@ -2,13 +2,12 @@
 
 @{
     Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
-    ViewBag.Title = Traducciones["NuevoPerfilDeHardware"].Texto;
+    ViewBag.Title = Traducciones["EditarPerfilDeHardware"].Texto;
 }
-
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">@Traducciones["NuevoPerfilDeHardware"].Texto</h1>
+        <h1 class="h2">@Traducciones["EditarPerfilDeHardware"].Texto</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
                 <a>@Html.ActionLink(@Traducciones["Volver"].Texto, "Index", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
@@ -23,12 +22,21 @@
         {
             @Html.AntiForgeryToken()
 
+        <div class="row gy-2 gx-3 align-items-center">
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
 
 
+            <div class=" col-auto">
+                <div class=" input-group col-md-10">
+                    <span class="input-group-text">Id</span>
+                    @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                    @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-        <div class="row gy-2 gx-3 align-items-center">
+
 
             <div class="col-auto">
                 <div class=" input-group col-md-10">
@@ -108,17 +116,16 @@
             </div>
 
             <br />
-            <div class="col-md-6">
+            <div class="form-group col-sm-4">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="@Traducciones["Crear"].Texto" class="btn btn-primary" />
+                    <input type="submit" value="@Traducciones["Guardar"].Texto" class="btn btn-primary" />
                 </div>
             </div>
         </div>
         }
+
     </div>
-
 </main>
-
 
 <script>
 
