Inicio de Asignación de Activos

--- a/UI/Views/PerfilHardware/Index.cshtml
+++ b/UI/Views/PerfilHardware/Index.cshtml
@@ -84,7 +84,7 @@
             </td>
 
             <td>
-                <a href="@Url.Action("Details", "PerfilDardware", new {id=item.Id })"><i class="fa fa-eye"></i></a>&ensp;&ensp;
+                <a href="@Url.Action("Details", "PerfilHardware", new {id=item.Id })"><i class="fa fa-eye"></i></a>&ensp;&ensp;
                 <a href="@Url.Action("Edit", "PerfilHardware", new {id=item.Id })"><i class="fa fa-edit"></i></a>&ensp;&ensp;
                 <a href="#" onclick="Confirmar('@item.Id','@item.Descripcion')"><i class="fa fa-trash"></i></a>
             </td>
