Avance en Asignación de Activo

--- a/UI/Views/Activo/Create.cshtml
+++ b/UI/Views/Activo/Create.cshtml
@@ -189,7 +189,7 @@
 
         window.onload = function () {
             document.getElementById('activos-collapse').className = 'show';
-            document.getElementById('Activos').className = 'btn-activo';
+            document.getElementById('AsignacionActivo').className = 'btn-activo';
         };
     </script>
 
