--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -82,8 +82,8 @@
                                             <li>@Html.ActionLink(Traducciones["Dispositivos"].Texto, "Index", "Activo", null, new { @class = "link-dark rounded", @id = "Activos" })</li>
                                             <li>@Html.ActionLink(Traducciones["Marcas"].Texto, "Index", "Marca", null, new { @class = "link-dark rounded", @id = "Marcas" })</li>
                                             <li>@Html.ActionLink(Traducciones["PerfilesDeHardware"].Texto, "Index", "PerfilHardware", null, new { @class = "link-dark rounded", @id = "PerfilHardware" })</li>
+                                            <li>@Html.ActionLink(Traducciones["AsignacionDeActivos"].Texto, "Index", "AsignacionActivo", null, new { @class = "link-dark rounded", @id = "AsignacionActivo" })</li>
 
-                                            <li><a href="#" class="link-dark rounded">@Traducciones["AsignacionDeActivos"].Texto</a></li>
                                         </ul>
                                     </div>
                                 </li>
