--- a/UI/Views/Colaborador/Details.cshtml
+++ b/UI/Views/Colaborador/Details.cshtml
@@ -71,6 +71,21 @@
             </dd>
 
             <dt>
+                @Traducciones["FullRemoto"].Texto
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.FullRemoto)
+            </dd>
+            <dt>
+                @Traducciones["Localizacion"].Texto
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Localizacion.Descripcion)
+            </dd>
+
+            <dt>
                 @Traducciones["PerfilDeHardware"].Texto
             </dt>
 
