--- a/UI/Views/Colaborador/Create.cshtml
+++ b/UI/Views/Colaborador/Create.cshtml
@@ -28,103 +28,132 @@
 
 
 
-        <div class="row gy-2 gx-3 align-items-center">
+            <div class="row gy-2 gx-3 align-items-center">
 
-            <div class="col-auto">
-                <div class=" input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Nombre"].Texto</span>
-                    @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-                    @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                <div class="col-auto">
+                    <div class=" input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Nombre"].Texto</span>
+                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                        @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Apellido"].Texto</span>
+                        @Html.EditorFor(model => model.Apellido, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Apellido, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Email"].Texto</span>
+                        @Html.EditorFor(model => model.Mail, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Mail, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Departamento"].Texto</span>
+                        @Html.DropDownListFor(model => model.Departamento.Id, new SelectList((System.Collections.IEnumerable)ViewData["Departamentos"], "Id", "Descripcion"), new { @class = "form-control" })
+                    </div>
+                </div>
+
+                <div class="col-auto ">
+
+                    <label class="control-label col-md-2">@Traducciones["FullRemoto"].Texto</label>
+                    <div class="col-md-10">
+                        @Html.CheckBoxFor(model => model.FullRemoto, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.FullRemoto, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Localizacion"].Texto</span>
+                        @Html.DropDownListFor(model => model.Localizacion.Id, new SelectList((System.Collections.IEnumerable)ViewData["Localizaciones"], "Id", "Descripcion"), new { @class = "form-control", @id = "Loc" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["PerfilDeHardware"].Texto</span>
+                        @Html.DropDownListFor(model => model.PerfilHardware.Id, new SelectList((System.Collections.IEnumerable)ViewData["Perfiles"], "Id", "Descripcion"), new { @class = "form-control" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Calle"].Texto</span>
+                        @Html.EditorFor(model => model.Ubicacion.Calle, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Ubicacion.Calle, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Numero"].Texto</span>
+                        @Html.EditorFor(model => model.Ubicacion.Altura, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Ubicacion.Altura, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["CodigoPostal"].Texto</span>
+                        @Html.EditorFor(model => model.Ubicacion.CodigoPostal, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Ubicacion.CodigoPostal, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Piso"].Texto</span>
+                        @Html.EditorFor(model => model.Ubicacion.Piso, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Ubicacion.Piso, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["NumeroDepartamento"].Texto</span>
+                        @Html.EditorFor(model => model.Ubicacion.Departamento, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Ubicacion.Departamento, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
+                <br />
+                <div class="col-md-6">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="@Traducciones["Crear"].Texto" class="btn btn-primary" />
+                    </div>
                 </div>
             </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Apellido"].Texto</span>
-                    @Html.EditorFor(model => model.Apellido, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Apellido, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Email"].Texto</span>
-                    @Html.EditorFor(model => model.Mail, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Mail, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Departamento"].Texto</span>
-                    @Html.DropDownListFor(model => model.Departamento.Id, new SelectList((System.Collections.IEnumerable)ViewData["Departamentos"], "Id", "Descripcion"), new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["PerfilDeHardware"].Texto</span>
-                    @Html.DropDownListFor(model => model.PerfilHardware.Id, new SelectList((System.Collections.IEnumerable)ViewData["Perfiles"], "Id", "Descripcion"), new { @class = "form-control" })
-                </div>
-            </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Calle"].Texto</span>
-                    @Html.EditorFor(model => model.Ubicacion.Calle, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Ubicacion.Calle, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Numero"].Texto</span>
-                    @Html.EditorFor(model => model.Ubicacion.Altura, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Ubicacion.Altura, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["CodigoPostal"].Texto</span>
-                    @Html.EditorFor(model => model.Ubicacion.CodigoPostal, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Ubicacion.CodigoPostal, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Piso"].Texto</span>
-                    @Html.EditorFor(model => model.Ubicacion.Piso, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Ubicacion.Piso, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["NumeroDepartamento"].Texto</span>
-                    @Html.EditorFor(model => model.Ubicacion.Departamento, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Ubicacion.Departamento, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-
-            <br />
-            <div class="col-md-6">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="@Traducciones["Crear"].Texto" class="btn btn-primary" />
-                </div>
-            </div>
-        </div>
         }
     </div>
 
 </main>
-
-<script>
+@section scripts {
+    <script>
 
         window.onload = function () {
             document.getElementById('org-collapse').className = 'show';
             document.getElementById('Colaborador').className = 'btn-activo';
         };
-</script>
 
+
+        $(function () {
+            $('#FullRemoto').change(function () {
+                if ($(this).is(':checked')) {
+                    // disable the dropdown:
+                    $('#Loc').attr('disabled', 'disabled');
+                } else {
+                    $('#Loc').removeAttr('disabled');
+                }
+            });
+        });
+    </script>
+    }
