Asignación de Activo

--- a/UI/Views/AsignacionActivo/Create.cshtml
+++ b/UI/Views/AsignacionActivo/Create.cshtml
@@ -75,7 +75,7 @@
                 <br />
                 <div class="col-md-6">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="@Traducciones["Crear"].Texto" class="btn btn-primary" />
+                        <input type="submit" value="@Traducciones["Asignar"].Texto" class="btn btn-primary" />
                     </div>
                 </div>
 
