--- a/UI/Views/AsignacionActivo/Create.cshtml
+++ b/UI/Views/AsignacionActivo/Create.cshtml
@@ -20,69 +20,112 @@
 
     <div class="container-fluid pull-left" style="max-width:1024px">
 
+
+
+
+
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="row gy-2 gx-3 align-items-center">
+            <div class="row gy-2 gx-3 align-items-center">
 
 
-            <div class=" col-auto">
+                <div class=" col-auto">
 
-                <div class=" input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Detalle"].Texto</span>
-                    @Html.EditorFor(model => model.Detalle, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-                    @Html.ValidationMessageFor(model => model.Detalle, "", new { @class = "text-danger" })
-
-
-                </div>
-            </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Activo"].Texto</span>
-                    @Html.DropDownListFor(model => model.Activo.Id, new SelectList((System.Collections.IEnumerable)ViewData["Activos"], "Id", "Nombre"), new { @class = "form-control" })
-                </div>
-            </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Colaborador"].Texto</span>
-
-                    @Html.DropDownListFor(model => model.Colaborador.Id, (SelectList)ViewBag.Colaboradores, new { @class = "form-control" })
-                </div>
-            </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Tipo"].Texto</span>
-                    @Html.DropDownListFor(model => model.Tipo.Id, new SelectList((System.Collections.IEnumerable)ViewData["TiposAsignacion"], "Id", "Descripcion")," Seleccionar..", new { @class = "form-control" })
-                </div>
-            </div>
-
-            <div class="col-auto ">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["FechaAsignacion"].Texto</span>
-                    @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "form-control datepicker", @autocomplete = "off" } })
-                    @Html.ValidationMessageFor(model => model.FechaInicio, "", new { @class = "text-danger" })
-                </div>
-            </div>
+                    <div class=" input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Detalle"].Texto</span>
+                        @Html.EditorFor(model => model.Detalle, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                        @Html.ValidationMessageFor(model => model.Detalle, "", new { @class = "text-danger" })
 
 
-        </div>
-                <br />
-                <div class="col-md-6">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="@Traducciones["Asignar"].Texto" class="btn btn-primary" />
                     </div>
                 </div>
 
-                }
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Dispositivo"].Texto</span>
+                        @Html.DropDownListFor(model => model.Activo.Id, new SelectList((System.Collections.IEnumerable)ViewData["Activos"], "Id", "Nombre"), new { @class = "form-control" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Colaborador"].Texto</span>
+
+                        @Html.DropDownListFor(model => model.Colaborador.Id, (SelectList)ViewBag.Colaboradores, new { @class = "form-control" })
+                    </div>
+                </div>
+
+                <div class="col-auto">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["Ubicacion"].Texto</span>
+                        @Html.DropDownListFor(model => model.Tipo.Id, new SelectList((System.Collections.IEnumerable)ViewData["TiposAsignacion"], "Id", "Descripcion"), " Seleccionar..", new { @class = "form-control" })
+                    </div>
+                </div>
+
+                <div class="col-auto ">
+                    <div class="input-group col-md-10">
+                        <span class="input-group-text"> @Traducciones["FechaAsignacion"].Texto</span>
+                        @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "form-control datepicker", @autocomplete = "off" } })
+                        @Html.ValidationMessageFor(model => model.FechaInicio, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
 
             </div>
+            <br />
+            <div class="col-md-6">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="@Traducciones["Asignar"].Texto" class="btn btn-primary" />
+                </div>
+            </div>
 
+        }
+
+    </div>
+
+    <!-- Modal Ubicación en Sucursal-->
+    <div class="modal fade" id="sucursal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">  </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Ubicado en sucursal
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-primary" onclick="Eliminar()"> @Traducciones["Confirmar"].Texto</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Ubicación en Domicilio-->
+    <div class="modal fade" id="colaborador" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">  </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Ubicado en domicilio de usuario
+
+                    <span class="ub_calle"></span>
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-primary" onclick="Eliminar()"> @Traducciones["Confirmar"].Texto</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </main>
 
@@ -102,4 +145,26 @@
             document.getElementById('Activos').className = 'btn-activo';
         };
     </script>
-    }
+
+    <script>
+        $("#Tipo_Id").change(function () {
+
+            if ($('#Tipo_Id').val() == "2") // En Sucursal de la Empresa
+            {
+                console.log($('#Tipo_Id').val())
+
+                $("#sucursal").modal('show');
+                $('ub_calle').text("New Span text content");
+            }
+
+            else if ($('#Tipo_Id').val() == "1") // En domicilio del Colaborador
+
+            {
+
+                $("#colaborador").modal('show');
+            }
+        });
+    </script>
+
+
+}
