--- a/UI/Views/AsignacionActivo/Create.cshtml
+++ b/UI/Views/AsignacionActivo/Create.cshtml
@@ -47,7 +47,7 @@
                 <div class="col-auto">
                     <div class="input-group col-md-10">
                         <span class="input-group-text"> @Traducciones["Dispositivo"].Texto</span>
-                        @Html.DropDownListFor(model => model.Activo.Id, new SelectList((System.Collections.IEnumerable)ViewData["Activos"], "Id", "Nombre"), new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.Activo.Id, new SelectList((System.Collections.IEnumerable)ViewData["Activos"], "Id", "DescripcionLarga"), new { @class = "form-control" })
                     </div>
                 </div>
 
@@ -86,6 +86,7 @@
         }
 
     </div>
+
 
     <!-- Modal Ubicación en Sucursal-->
     <div class="modal fade" id="sucursal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
