--- a/UI/Views/AsignacionActivo/Index.cshtml
+++ b/UI/Views/AsignacionActivo/Index.cshtml
@@ -38,17 +38,17 @@
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
         }
-        @if (ViewBag.EditadoOk != null)
+        @if (ViewBag.FinalizadoOk != null)
         {
             <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>Correcto:</strong> @Traducciones["DispositivoEditado"].Texto
+                <strong>Correcto:</strong> @Traducciones["AsignacionFinalizada"].Texto
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
         }
 
 
 
-        <table class="table table-hover">
+        <table class="table table-hover table-responsive">
             <thead>
                 <tr>
 
@@ -56,7 +56,7 @@
                         @Traducciones["Dispositivo"].Texto
                     </th>
                     <th>
-                        @Traducciones["Descripcion"].Texto
+                        @Traducciones["Tipo"].Texto
                     </th>
                     <th>
                         @Traducciones["NumeroSerie"].Texto
@@ -65,7 +65,7 @@
                         @Traducciones["Colaborador"].Texto
                     </th>
                     <th>
-                        @Traducciones["Tipo"].Texto
+                        @Traducciones["Destino"].Texto
                     </th>
                     <th>
                         @Traducciones["FechaInicio"].Texto
