--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -99,7 +99,8 @@
                                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                                             <li>@Html.ActionLink(Traducciones["ProductosDeSoftware"].Texto, "Index", "ProductoSoftware", null, new { @class = "link-dark rounded", @id = "ProdSoft" })</li>
                                             <li>@Html.ActionLink(Traducciones["ContratosDeLicencia"].Texto, "Index", "Licencia", null, new { @class = "link-dark rounded", @id = "Licencias" })</li>
-                                            <li><a href="#" class="link-dark rounded">@Traducciones["AsignacionDeLicencias"].Texto</a></li>
+                                            <li>@Html.ActionLink(Traducciones["AsignacionDeLicencias"].Texto, "Index", "AsignacionLicencia", null, new { @class = "link-dark rounded", @id = "AsigLicencias" })</li>
+                                     
 
 
                                         </ul>
